# buildr

./: .gitignore  CMakeLists.txt  README.md
include/: admin.hpp  client.hpp
include/resource/: linux_namespace.hpp
include/roles/: admin.hpp  client.hpp
include/state/: log_manager.hpp
include/utils/: os.hpp
src/: main.cpp
src/resource/: CMakeLists.txt  linux_namespace.cpp
src/roles/: CMakeLists.txt  admin.cpp  client.cpp
src/state/: CMakeLists.txt  log_manager.cpp
src/utils/: CMakeLists.txt  os.cpp
